Доработки по столбцам

--- a/lk5.html
+++ b/lk5.html
@@ -187,42 +187,6 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID покупателя</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>ФИО покупателя</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>ID получателя баллов</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
-                          <span>Получатель баллов</span>
-                        </div>
-                        <div class="table_array">
-                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
-                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
-                        </div>
-                      </th>
-                      <th>
-                        <div>
                           <span>ID склада покупателя</span>
                         </div>
                         <div class="table_array">
@@ -232,7 +196,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>Название склада краткое</span>
+                          <span>Название склада</br> покупателя краткое</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -251,6 +215,15 @@
                       <th>
                         <div>
                           <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -278,13 +251,10 @@
                     </td>
                     <td>29.10.20</td>
                     <td>234589</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
                     <td>Наименование склада</td>
                     <td>Продажа</td>
-                    <td>758739</td>
+                    <td>805903</td>
+                    <td>Статус</td>
                     <td>Большой и длинный комментарий</td>
                   </tr>
                   <tr>
@@ -296,13 +266,10 @@
                     </td>
                     <td>29.10.20</td>
                     <td>234589</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
                     <td>Наименование склада</td>
                     <td>Продажа</td>
-                    <td>758739</td>
+                    <td>805903</td>
+                    <td>Статус</td>
                     <td>Большой и длинный комментарий</td>
                   </tr>
                   <tr>
@@ -314,13 +281,10 @@
                     </td>
                     <td>29.10.20</td>
                     <td>234589</td>
-                    <td>Круглова Л.А.</td>
-                    <td>805903</td>
-                    <td>Круглова Л.А.</td>
-                    <td>234589</td>
                     <td>Наименование склада</td>
                     <td>Продажа</td>
-                    <td>758739</td>
+                    <td>805903</td>
+                    <td>Статус</td>
                     <td>Большой и длинный комментарий</td>
                   </tr>
                   <tr>
@@ -332,13 +296,25 @@
                     </td>
                     <td>29.10.20</td>
                     <td>234589</td>
-                    <td>Круглова Л.А.</td>
+                    <td>Наименование склада</td>
+                    <td>Продажа</td>
                     <td>805903</td>
-                    <td>Круглова Л.А.</td>
+                    <td>Статус</td>
+                    <td>Большой и длинный комментарий</td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div class="lin_t_top">
+                        <span>R2020-000228</span>
+                        <a href="#" class="lt3 open_view">Просмотр</a>
+                      </div>
+                    </td>
+                    <td>29.10.20</td>
                     <td>234589</td>
                     <td>Наименование склада</td>
                     <td>Продажа</td>
-                    <td>758739</td>
+                    <td>805903</td>
+                    <td>Статус</td>
                     <td>Большой и длинный комментарий</td>
                   </tr>
                   </tbody>
