--- a/lk7.html
+++ b/lk7.html
@@ -155,7 +155,7 @@
                     <tr class="head_t table_returns">
                       <th style="width: 11%">
                         <div>
-                          <span>Номер / Действия</span>
+                          <span>Номер возвратной накладной</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -165,6 +165,15 @@
                       <th>
                         <div>
                           <span>Дата создания (сервер)</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -209,6 +218,15 @@
                       </th>
                       <th>
                         <div>
+                          <span>Номер накладной продажи</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
                           <span>Комментарий</span>
                         </div>
                         <div class="table_array">
@@ -230,11 +248,13 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>921005</td>
+                      <td>Статус</td>
+                      <td>805903</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>805903</td>
+                      <td>Комментарий</td>
                     </tr>
                     <tr>
                       <td>
@@ -247,11 +267,13 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>921005</td>
+                      <td>Статус</td>
+                      <td>805903</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>805903</td>
+                      <td>Комментарий</td>
                     </tr>
                     <tr>
                       <td>
@@ -264,11 +286,13 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>921005</td>
+                      <td>Статус</td>
+                      <td>805903</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>805903</td>
+                      <td>Комментарий</td>
                     </tr>
                     <tr>
                       <td>
@@ -281,11 +305,13 @@
                         </div>
                       </td>
                       <td>29.10.20</td>
-                      <td>921005</td>
+                      <td>Статус</td>
+                      <td>805903</td>
                       <td>Круглова Л.А.</td>
                       <td>805903</td>
                       <td>Кондырев</td>
-                      <td>tt - test</td>
+                      <td>805903</td>
+                      <td>Комментарий</td>
                     </tr>
                   </tbody>
                 </table>
