--- a/lk15.html
+++ b/lk15.html
@@ -164,7 +164,7 @@
                 </ul>
               </div>
               <div class="middle_part">
-                <div style="overflow-x: scroll">
+                <div>
                   <table class="otch_p bordered">
                     <thead>
                       <tr class="head_t table_returns">
@@ -188,7 +188,16 @@
                       </th>
                       <th>
                         <div>
-                          <span>Тип продажи</span>
+                          <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -233,7 +242,25 @@
                       </th>
                       <th>
                         <div>
-                          <span>Сумма</span>
+                          <span>Тип продажи</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Доставка</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Адрес</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -256,72 +283,88 @@
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Дистрибьюторская</td>
+                      <td>910283</td>
+                      <td>Статус</td>
                       <td>910283</td>
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>232444</td>
+                      <td>Тип продажи</td>
+                      <td>Доставка</td>
+                      <td>Адрес</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr style="background-color: rgba(237, 26, 46, 0.16);">
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Дистрибьюторская</td>
+                      <td>910283</td>
+                      <td>Статус</td>
                       <td>910283</td>
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>232444</td>
+                      <td>Тип продажи</td>
+                      <td>Доставка</td>
+                      <td>Адрес</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr style="background-color: #CEEBEA;">
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Дистрибьюторская</td>
+                      <td>910283</td>
+                      <td>Статус</td>
                       <td>910283</td>
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>232444</td>
+                      <td>Тип продажи</td>
+                      <td>Доставка</td>
+                      <td>Адрес</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Дистрибьюторская</td>
+                      <td>910283</td>
+                      <td>Статус</td>
                       <td>910283</td>
                       <td>Кондырева Я. В.</td>
                       <td>897199</td>
                       <td>Кондырева Я. В.</td>
-                      <td>232444</td>
+                      <td>Тип продажи</td>
+                      <td>Доставка</td>
+                      <td>Адрес</td>
                       <td>Большой и длинный комментарий</td>
                     </tr>
                     </tbody>
