--- a/lk6.html
+++ b/lk6.html
@@ -148,8 +148,15 @@
           </div>
           <div class="component_body">
             <div class="f_part">
+              <div class="nav_top">
+                <ul>
+                  <li><a href="#">PDF</a></li>
+                  <li><a href="#">Печать всего</a></li>
+                  <li><a href="#">Печать документа</a></li>
+                </ul>
+              </div>
               <div class="middle_part">
-                <div style="overflow-x: scroll">
+                <div>
                   <table class="otch_p bordered">
                     <thead>
                     <tr class="head_t table_returns">
@@ -173,7 +180,34 @@
                       </th>
                       <th>
                         <div>
-                          <span>Получатель баллов</span>
+                          <span>Сумма</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Статус</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>ID покупателя</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Покупатель</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -191,7 +225,16 @@
                       </th>
                       <th>
                         <div>
-                          <span>Сумма</span>
+                          <span>Получатель баллов</span>
+                        </div>
+                        <div class="table_array">
+                          <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
+                          <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
+                        </div>
+                      </th>
+                      <th>
+                        <div>
+                          <span>Комментарий</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -201,61 +244,81 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr style="background-color: #E6F4F4;">
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Кондырева Я. В.</td>
                       <td>910283</td>
+                      <td>Статус</td>
+                      <td>910283</td>
+                      <td>Кондырева Я. В.</td>
                       <td>897199</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>Большой и длинный комментарий</td>
+                    </tr>
+                    <tr style="background-color: rgba(237, 26, 46, 0.16);">
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>23.10.2020</td>
+                      <td>910283</td>
+                      <td>Статус</td>
+                      <td>910283</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>897199</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>Большой и длинный комментарий</td>
+                    </tr>
+                    <tr style="background-color: #CEEBEA;">
+                      <td>
+                        <div class="lin_t_top">
+                          <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
+                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
+                          </div>
+                          <a href="#" class="lt3 open_view">Просмотр</a>
+                        </div>
+                      </td>
+                      <td>23.10.2020</td>
+                      <td>910283</td>
+                      <td>Статус</td>
+                      <td>910283</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>897199</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>Большой и длинный комментарий</td>
                     </tr>
                     <tr>
                       <td>
                         <div class="lin_t_top">
                           <div style="margin-top: 11px">
+                            <span style="float: left;">2020-000255</span>
                             <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
                           </div>
                           <a href="#" class="lt3 open_view">Просмотр</a>
                         </div>
                       </td>
                       <td>23.10.2020</td>
-                      <td>Кондырева Я. В.</td>
                       <td>910283</td>
-                      <td>897199</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div class="lin_t_top">
-                          <div style="margin-top: 11px">
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
-                          </div>
-                          <a href="#" class="lt3 open_view">Просмотр</a>
-                        </div>
-                      </td>
-                      <td>23.10.2020</td>
-                      <td>Кондырева Я. В.</td>
+                      <td>Статус</td>
                       <td>910283</td>
-                      <td>897199</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div class="lin_t_top">
-                          <div style="margin-top: 11px">
-                            <img src="./images/delete.svg" alt="delete" style="margin-left: 10px; float: right">
-                          </div>
-                          <a href="#" class="lt3 open_view">Просмотр</a>
-                        </div>
-                      </td>
-                      <td>23.10.2020</td>
                       <td>Кондырева Я. В.</td>
-                      <td>910283</td>
                       <td>897199</td>
+                      <td>Кондырева Я. В.</td>
+                      <td>Большой и длинный комментарий</td>
                     </tr>
                     </tbody>
                   </table>
