Доработки по столбцам

--- a/lk14.html
+++ b/lk14.html
@@ -171,9 +171,9 @@
                           <img src="./images/array-drop-down.svg" alt="Сортировка" class="table_array_bottom">
                         </div>
                       </th>
-                      <th style="width: 10%">
+                      <th style="width: 12%">
                         <div>
-                          <span>№ дочернего склада</span>
+                          <span>№ вышестоящего склада</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
