--- a/lk19.html
+++ b/lk19.html
@@ -150,10 +150,6 @@
                 <input type="checkbox" class="line_param_checkbox" id="cashless" checked/>
                 <label class="line_param_label" for="cashless">Безнал</label>
               </div>
-              <div class="check_block">
-                <input type="checkbox" class="line_param_checkbox" id="personal"/>
-                <label class="line_param_label" for="personal">Лицевой</label>
-              </div>
             </div>
           </div>
           <div class="component_body">
@@ -170,7 +166,7 @@
                     <thead>
                       <tr class="head_t">
                         <th style="padding-right: 25px">
-                          <span>Дата операции</span>
+                          <span>Дата создания (сервер)</span>
                         </th>
                         <th style="padding-right: 25px">
                           <span>Начисление</span>
@@ -182,16 +178,10 @@
                           <span>Тип ДС</span>
                         </th>
                         <th style="padding-right: 25px">
+                          <span>ID Контрагента</span>
+                        </th>
+                        <th style="padding-right: 25px">
                           <span>Комментарий</span>
-                        </th>
-                        <th style="padding-right: 25px">
-                          <span>Итогово на лицевом счете</span>
-                        </th>
-                        <th style="padding-right: 25px">
-                          <span>Контрагент (№)</span>
-                        </th>
-                        <th style="padding-right: 25px">
-                          <span>Пользователь/Оператор</span>
                         </th>
                       </tr>
                     </thead>
@@ -201,50 +191,40 @@
                         <td>2345678</td>
                         <td>0</td>
                         <td>Лицевой счет</td>
-                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
-                        <td>1785578</td>
                         <td>345255</td>
-                        <td>Зам управляющего Григорьев А.В</td>
+                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
                       <tr>
                         <td>01.03.2020</td>
                         <td>2345678</td>
                         <td>0</td>
                         <td>Лицевой счет</td>
-                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
-                        <td>1785578</td>
                         <td>345255</td>
-                        <td>Зам управляющего Григорьев А.В</td>
+                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
                       <tr>
                         <td>01.03.2020</td>
                         <td>2345678</td>
                         <td>0</td>
                         <td>Лицевой счет</td>
-                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
-                        <td>1785578</td>
                         <td>345255</td>
-                        <td>Зам управляющего Григорьев А.В</td>
+                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
                       <tr>
                         <td>01.03.2020</td>
                         <td>2345678</td>
                         <td>0</td>
                         <td>Лицевой счет</td>
-                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
-                        <td>1785578</td>
                         <td>345255</td>
-                        <td>Зам управляющего Григорьев А.В</td>
+                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
                       <tr>
                         <td>01.03.2020</td>
                         <td>2345678</td>
                         <td>0</td>
                         <td>Лицевой счет</td>
-                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
-                        <td>1785578</td>
                         <td>345255</td>
-                        <td>Зам управляющего Григорьев А.В</td>
+                        <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
                     </tbody>
                   </table>
