--- a/lk20.html
+++ b/lk20.html
@@ -130,15 +130,15 @@
       </div>
       <div class="content">
         <div class="c_head">
-          <h1>Пользователи</h1>
+          <h1>Создание пользователей склада</h1>
         </div>
         <div class="component">
           <div class="component_body">
             <div class="line_param_input">
               <div class="l_p">
                 <div class="nav_links" style="margin: 0">
-                  <a class="brd_green fill w50" href="#">Пополнить</a>
-                  <a class="brd_green w50 last" href="#">Отмена</a>
+                  <a class="brd_green fill w50 add_user" href="#">Создать пользователя</a>
+                  <a class="brd_green w50 last" href="#">Редактировать пользователя</a>
                 </div>
               </div>
             </div>
@@ -375,14 +375,7 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-      <div class="footer">
-        <div class="footer_line">
-          <div class="title_line title_line_adaptive">
-            <div class="title_line_t filter">Фильтры</div>
-          </div>
-          <div class="modal_line">
+          <div class="modal_add_user">
             <a href="#" class="closebig"></a>
             <h3>Создать пользователя</h3>
             <div class="component_body">
@@ -429,6 +422,55 @@
               <div class="r_p" style="float: right;">
                 <div class="nav_links">
                   <a class="brd_green fill w50" href="#" style="float: right">Создать</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer">
+        <div class="footer_line">
+          <div class="title_line title_line_adaptive">
+            <div class="title_line_t filter">Фильтры</div>
+          </div>
+          <div class="modal_line">
+            <a href="#" class="closebig"></a>
+            <h3>Фильтры</h3>
+            <div class="component_body">
+              <div class="line_param_input line_param_input_t">
+                <div class="modal_check_block" style="margin-left: 0">
+                  <input type="checkbox" class="line_param_checkbox" id="active" />
+                  <label class="line_param_label" for="active">Активные</label>
+                </div>
+              </div>
+            </div>
+            <div class="component_body">
+              <div class="line_param_input">
+                <div class="l_p">
+                  <div class="label_in">
+                    <div class="line_param_top">
+                      Роль
+                    </div>
+                    <div class="line_param_bottom">
+                      Складодержатель
+                    </div>
+                    <span class="array_down"></span>
+                    <div class="line_param_border"></div>
+                  </div>
+                </div>
+                <div class="r_p" style="margin-top: 14px">
+                  <div class="label_in">
+                    <input type="text" class="tinput" required />
+                    <label class="tlabel">Укажите ФИО</label>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="component_body" style="width: 100%">
+              <div class="r_p" style="float: right;">
+                <div class="nav_links">
+                  <a class="brd_green fill w50" href="#" style="margin-top: 0">Показать</a>
+                  <a class="brd_green w50 last" href="#" style="margin-top: 0">Сбросить</a>
                 </div>
               </div>
             </div>
