--- a/lk5.html
+++ b/lk5.html
@@ -187,7 +187,7 @@
                       </th>
                       <th>
                         <div>
-                          <span>ID склада покупателя</span>
+                          <span>ID склада контрагента</span>
                         </div>
                         <div class="table_array">
                           <img src="./images/array-drop-top.svg" alt="Сортировка" class="table_array_top">
@@ -592,19 +592,13 @@
                     </ul>
                   </div>
                 </div>
+              </div>
+              <div class="r_p">
                 <div class="line_param_input">
                   <div class="label_in">
                     <input type="text" class="tinput" />
                     <label class="tlabel" for>Документы</label>
                     <span class="array_down"></span>
-                  </div>
-                </div>
-              </div>
-              <div class="r_p">
-                <div class="line_param_input">
-                  <div class="label_in">
-                    <input type="text" class="tinput" required />
-                    <label class="tlabel" for>ID / ФИО покупателя</label>
                   </div>
                 </div>
                 <div class="nav_links">
