--- a/lk17.html
+++ b/lk17.html
@@ -537,6 +537,10 @@
                     <label class="tlabel">Партнер-получатель</label>
                     <a href="#" class="line_param_down"></a>
                   </div>
+                  <div class="label_in">
+                    <input type="text" class="tinput" />
+                    <label class="tlabel">Комментарий</label>
+                  </div>
                 </div>
                 <div class="r_p">
                   <div class="line_param">
