--- a/lk19.html
+++ b/lk19.html
@@ -226,6 +226,9 @@
                         <td>345255</td>
                         <td>Pозничная продажа партнёру 123131 на складе 123123 по накладной 1</td>
                       </tr>
+                      <tr class="head_t">
+                        <th colspan="6" class="bgs"> Итого за период&nbsp;&nbsp;&nbsp; начисление = 7952,&nbsp;&nbsp;&nbsp;списание = 9210,&nbsp;&nbsp;&nbsp;изменение = 3544</th>
+                      </tr>
                     </tbody>
                   </table>
                 </div>
