--- a/lk7.html
+++ b/lk7.html
@@ -445,6 +445,86 @@
               </div>
             </div>
           </div>
+          <div class="modal_nakl">
+            <a href="#" class="closebig"></a>
+            <h3>Накладная № 2020-000255</h3>
+            <div class="component_body">
+              <div class="f_part" style="padding-bottom: 20px">
+                <div class="middle_part">
+                  <table class="otch_p bordered">
+                    <thead>
+                      <tr class="head_t">
+                        <th>ID</th>
+                        <th>Артикул</th>
+                        <th>Товар</th>
+                        <th>Цена</th>
+                        <th>Кол-во</th>
+                        <th>Стоимость</th>
+                        <th>Возвращено</th>
+                        <th>Баллов всего</th>
+                        <th>Кол-во вернуть</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>42451467</td>
+                        <td>42451467</td>
+                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                        <td>1076.40</td>
+                        <td>34</td>
+                        <td>1076.40</td>
+                        <td>1076.40</td>
+                        <td>10.3</td>
+                        <td>
+                          <span>Количество</span>
+                          <input value="23 |" class="input_edit"/>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>42451467</td>
+                        <td>42451467</td>
+                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                        <td>1076.40</td>
+                        <td>34</td>
+                        <td>1076.40</td>
+                        <td>1076.40</td>
+                        <td>10.3</td>
+                        <td>
+                          <span>Количество</span>
+                          <input value="23 |" class="input_edit"/>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>42451467</td>
+                        <td>42451467</td>
+                        <td>Шампунь для волос "Натурасепт" сила трех масел, 250 мл</td>
+                        <td>1076.40</td>
+                        <td>34</td>
+                        <td>1076.40</td>
+                        <td>1076.40</td>
+                        <td>10.3</td>
+                        <td>
+                          <span>Количество</span>
+                          <input value="23 |" class="input_edit"/>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="component_body">
+              <div class="line_param_input">
+                <div class="label_in">
+                  <input type="text" class="tinput" />
+                  <label class="tlabel" style="top: 18px">Оставить комментарий</label>
+                </div>
+              </div>
+            </div>
+            <div class="nav_links">
+              <a class="brd_green fill button_adaptive" href="#" style="float: right; margin-right: 0">Вернуть</a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
